k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tax-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
         #Frontend route
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
        #backend route
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: service-a
                port:
                  number: 80
